# tudat

./: .gitignore  changelog.md
Tudat/: CMakeLists.txt
Tudat/Astrodynamics/: CMakeLists.txt
Tudat/Astrodynamics/Aerodynamics/: CMakeLists.txt  aerodynamicCoefficientGenerator.h  aerodynamicCoefficientInterface.h  aerodynamics.h  atmosphereModel.h  customAerodynamicCoefficientInterface.h  customConstantTemperatureAtmosphere.cpp  customConstantTemperatureAtmosphere.h  equilibriumWallTemperature.h  exponentialAtmosphere.h  flightConditions.cpp  flightConditions.h  hypersonicLocalInclinationAnalysis.cpp  rarefiedFlowAnalysis.cpp  rarefiedFlowAnalysis.h  standardAtmosphere.h  tabulatedAtmosphere.cpp  tabulatedAtmosphere.h  windModel.h
Tudat/Astrodynamics/BasicAstrodynamics/: CMakeLists.txt  accelerationModel.h  accelerationModelTypes.h  astrodynamicsFunctions.cpp  customTorque.h  torqueModelTypes.cpp  torqueModelTypes.h  unifiedStateModelExponentialMapElementConversions.cpp  unifiedStateModelModifiedRodriguesParameterElementConversions.cpp
Tudat/Astrodynamics/EarthOrientation/: earthOrientationCalculator.cpp  earthOrientationCalculator.h
Tudat/Astrodynamics/Ephemerides/: rotationalEphemeris.h
Tudat/Astrodynamics/Gravitation/: gravityFieldVariations.cpp  gravityFieldVariations.h  tabulatedGravityFieldVariations.cpp  tabulatedGravityFieldVariations.h
Tudat/Astrodynamics/GuidanceNavigationControl/: CMakeLists.txt  control.cpp  control.h  controlSystem.cpp  controlSystem.h  controlTorque.h  extraFunctions.cpp  extraFunctions.h  gncInterface.h  guidance.cpp  guidance.h  guidanceSystem.cpp  guidanceSystem.h  instrument.h  navigation.cpp  navigation.h  navigationSystem.cpp  navigationSystem.h  onboardComputer.h  onboardComputerSystem.h
Tudat/Astrodynamics/Propagators/: CMakeLists.txt  dynamicsStateDerivativeModel.h  environmentUpdateTypes.h  imanRmsMethod.h  integrateEquations.h  nBodyCowellStateDerivative.h  nBodyStateDerivative.h  nBodyUnifiedStateModelExponentialMapStateDerivative.cpp  nBodyUnifiedStateModelQuaternionsStateDerivative.h  quaternionNormalizationMethod.h  rotationalMotionExponentialMapStateDerivative.h  rotationalMotionQuaternionsStateDerivative.cpp  rotationalMotionStateDerivative.cpp  rotationalMotionStateDerivative.h  singleStateTypeDerivative.cpp  singleStateTypeDerivative.h  stateTransitionMatrixInterface.h  variationalEquations.cpp  variationalEquations.h
Tudat/Astrodynamics/ReferenceFrames/: aerodynamicAngleCalculator.cpp  aerodynamicAngleCalculator.h
Tudat/Astrodynamics/SystemModels/: CMakeLists.txt  controlSystem.cpp  controlSystem.h  extraFunctions.cpp  extraFunctions.h  guidanceSystem.cpp  guidanceSystem.h  instrumentsModel.cpp  instrumentsModel.h  navigationInstrumentModel.h  navigationInstrumentsModel.cpp  navigationInstrumentsModel.h  navigationSystem.cpp  navigationSystem.h  onboardComputerModel.cpp  onboardComputerModel.h
Tudat/Astrodynamics/SystemModels/UnitTests/: generators.h  unitTestControlSystem.cpp  unitTestGuidanceSystem.cpp  unitTestInstrumentsModel.cpp  unitTestNavigationSystem.cpp
Tudat/Basics/: timeType.h  utilities.h
Tudat/InputOutput/: CMakeLists.txt  multiDimensionalArrayWriter.h  spartaDataReader.h  spartaInputOutput.h  tabulatedAtmosphereReader.h
Tudat/JsonInterface/Environment/: aerodynamics.cpp  gravityFieldVariation.cpp
Tudat/JsonInterface/Mathematics/: interpolation.cpp  interpolation.h
Tudat/JsonInterface/Support/: valueConversions.h
Tudat/JsonInterface/UnitTests/: unitTestAerodynamics.cpp  unitTestEphemeris.cpp  unitTestGravityFieldVariation.cpp  unitTestInterpolation.cpp  unitTestSimulationThrustAccelerationFromFile.cpp  unitTestThrust.cpp
Tudat/Mathematics/BasicMathematics/: CMakeLists.txt  basicMathematicsFunctions.h  leastSquaresEstimation.cpp  leastSquaresEstimation.h  linearAlgebra.cpp  linearAlgebra.h  nonLinearLeastSquaresEstimation.cpp  nonLinearLeastSquaresEstimation.h  numericalDerivative.cpp  numericalDerivative.h
Tudat/Mathematics/Filters/: createFilter.h  extendedKalmanFilter.h  filter.h  kalmanFilter.h  linearKalmanFilter.h  unscentedKalmanFilter.h
(+73 files in other folders)
